Move h1 to main, remove header tag, correct milliseconds span class

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Stopwatch</h1>
-    </header>
     <main>
+        <h1>Stopwatch</h1>
         <div class="stopwatch-wrapper">
             <div class="time-values">
                 <span class="time hour">00
@@ -21,7 +20,8 @@
                 <span class="time second">00
                     <span class="second-text">Sec</span>
                 </span>
-                <span class="time millisecond">00</span>
+                <span class="time one-hundredth">00
+                </span>
             </div>
         </div>
         <div class="buttons">
