Add disabled class to stop and reset buttons

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
         <div class="buttons">
             <button class="start">Start</button>
-            <button class="stop">Stop</button>
-            <button class="reset">Reset</button>
+            <button class="stop disabled">Stop</button>
+            <button class="reset disabled">Reset</button>
         </div>
     </main>
 </body>
