Update time span classes to IDs

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <h1>Stopwatch</h1>
         <div class="stopwatch-wrapper">
             <div class="time-values">
-                <span class="time hour">00
-                    <span class="hour-text">Hr</span>
+                <span id="hour" class="time">00
+                    <span id="hour-text">Hr</span>
                 </span>
-                <span class="time minute">00
-                    <span class="minute-text">Min</span>
+                <span id="minute" class="time">00
+                    <span id="minute-text">Min</span>
                 </span>
-                <span class="time second">00
-                    <span class="second-text">Sec</span>
+                <span id="second" class="time">00
+                    <span id="second-text">Sec</span>
                 </span>
-                <span class="time one-hundredth">00
+                <span id="one-hundredth" class="time">00
                 </span>
             </div>
         </div>
