--- a/index.html
+++ b/index.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stopwatch</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="main.js" defer></script>
-</head>
-<body>
-    <main>
-        <h1>Stopwatch</h1>
-        <div class="stopwatch-wrapper">
-            <div class="time-values">
-                <span id="hour" class="time">00
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Stopwatch</title>
+        <link rel="stylesheet" href="styles.css" />
+        <script src="main.js" defer></script>
+    </head>
+    <body>
+        <main>
+            <h1>Stopwatch</h1>
+            <div class="stopwatch-wrapper">
+                <div class="time-values">
+                    <span id="hour" class="time">00 </span>
                     <span id="hour-text">Hr</span>
-                </span>
-                <span id="minute" class="time">00
+                    <span id="minute" class="time">00 </span>
                     <span id="minute-text">Min</span>
-                </span>
-                <span id="second" class="time">00
+                    <span id="second" class="time">00 </span>
                     <span id="second-text">Sec</span>
-                </span>
-                <span id="one-hundredth" class="time">00
-                </span>
+                    <span id="one-hundredth" class="time">00 </span>
+                </div>
             </div>
-        </div>
-        <div class="buttons">
-            <button class="start">Start</button>
-            <button class="stop disabled">Stop</button>
-            <button class="reset disabled">Reset</button>
-        </div>
-    </main>
-</body>
+            <div class="buttons">
+                <button class="start">Start</button>
+                <button class="stop disabled">Stop</button>
+                <button class="reset disabled">Reset</button>
+            </div>
+        </main>
+    </body>
 </html>
