Remove .disabled class and update disabled attributes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </div>
             <div class="buttons">
                 <button class="start">Start</button>
-                <button class="stop disabled">Stop</button>
-                <button class="reset disabled">Reset</button>
+                <button class="stop" disabled>Stop</button>
+                <button class="reset" disabled>Reset</button>
             </div>
         </main>
     </body>
